syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

package ds_relation_rule_execute_sql;

message DsRelationRuleExecuteSql {

     int32 id= 1;
     optional int32 rule_id=2 ;
     optional int32 execute_sql_id=3 ;
     optional string create_time=4 ;
     optional string update_time=5 ;
}


// Generated according to https://cloud.google.com/apis/design/standard_methods
service DsRelationRuleExecuteSqlService {
  rpc ListDsRelationRuleExecuteSqls(ListDsRelationRuleExecuteSqlsRequest) returns (ListDsRelationRuleExecuteSqlsResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/DsRelationRuleExecuteSqls"
    };
  }

  rpc GetDsRelationRuleExecuteSql(GetDsRelationRuleExecuteSqlRequest) returns (DsRelationRuleExecuteSql) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=DsRelationRuleExecuteSqls/*}"
    };
  }

  rpc CreateDsRelationRuleExecuteSql(CreateDsRelationRuleExecuteSqlRequest) returns (DsRelationRuleExecuteSql) {
    option (google.api.http) = {
      post: "/v1alpha1/DsRelationRuleExecuteSqls"
      body: "DsRelationRuleExecuteSql"
    };
  }

  rpc UpdateDsRelationRuleExecuteSql(UpdateDsRelationRuleExecuteSqlRequest) returns (DsRelationRuleExecuteSql) {
    option (google.api.http) = {
      patch: "/v1alpha1/{DsRelationRuleExecuteSql.name=DsRelationRuleExecuteSqls/*}"
      body: "DsRelationRuleExecuteSql"
    };
  }

  rpc DeleteDsRelationRuleExecuteSql(DeleteDsRelationRuleExecuteSqlRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=DsRelationRuleExecuteSqls/*}"
    };
  }
}

// message DsRelationRuleExecuteSql {
// ! This should be defined elsewhere
// }

message ListDsRelationRuleExecuteSqlsRequest {


  // The maximum number of items to return.
  int32 page_size = 1;

 int32 page_num = 2;
}

message ListDsRelationRuleExecuteSqlsResponse {
  // The field name should match the noun "DsRelationRuleExecuteSql" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated DsRelationRuleExecuteSql DsRelationRuleExecuteSqls = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetDsRelationRuleExecuteSqlRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateDsRelationRuleExecuteSqlRequest {
  // The parent resource name where the DsRelationRuleExecuteSql is to be created.
  string parent = 1;

  // The DsRelationRuleExecuteSql id to use for this DsRelationRuleExecuteSql.
  string DsRelationRuleExecuteSql_id = 2;

  // The DsRelationRuleExecuteSql resource to create.
  // The field name should match the Noun in the method name.
  DsRelationRuleExecuteSql DsRelationRuleExecuteSql = 3;
}

message UpdateDsRelationRuleExecuteSqlRequest {
  // The DsRelationRuleExecuteSql resource which replaces the resource on the server.
  DsRelationRuleExecuteSql DsRelationRuleExecuteSql = 1;

  // The update mask applies to the resource. For the `google.protobuf.FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#google.protobuf.FieldMask
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteDsRelationRuleExecuteSqlRequest {
  // The resource name of the DsRelationRuleExecuteSql to be deleted.
  string name = 1;
}
